[package]
name = "tokio-quiche"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[dependencies]
log = "*"
rand = "*"
smallvec = "*"
futures = "*"
tokio-io = "*"
tokio-timer = "*"
tokio-sync = "*"
tokio-udp = "*"
# quiche = { git = "https://github.com/cloudflare/quiche" }
quiche = { path = "../fork/quiche", default-features = false }

[dev-dependencies]
tokio = "*"
